Disable Class Path Separation
See https://www.graalvm.org/docs/graalvm-as-a-platform/implement-language/#disable-class-path-separation for details