@@ -14,6 +14,18 @@
 
     <name>Scheme 4 GraalVM :: Language</name>
 
+    <properties>
+        <libs.dir>${project.build.directory}/jars</libs.dir>
+        <!--
+            See https://www.graalvm.org/docs/graalvm-as-a-platform/implement-language/#disable-class-path-separation
+        -->
+        <classpathSeparationArgs>
+            -Dgraalvm.locatorDisabled=true
+            --upgrade-module-path=${libs.dir}/truffle-api.jar
+            --add-modules it.mulders.scheme4graalvm.parser
+        </classpathSeparationArgs>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.graalvm.truffle</groupId>
@@ -60,12 +72,48 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} ${classpathSeparationArgs}</argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <goal>integration-test</goal>
                             <goal>verify</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} ${classpathSeparationArgs}</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-truffle-api</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.graalvm.truffle</groupId>
+                                    <artifactId>truffle-api</artifactId>
+                                    <version>${graal.sdk.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <destFileName>truffle-api.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${libs.dir}</outputDirectory>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
